--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 .food {
     background-color: hsl(17, 100%, 50%);
     border: 5px hsl(30, 100%, 0%) solid;
-    height: 300px;
+    overflow: auto;
 }
 
 .food__title {
@@ -39,8 +39,8 @@ body {
 }
 
 .food__image {
-    width: auto;
-    height: 290px;
+    width: 400px;
+    height: auto;
     display: block;
     float: left;
     padding: 5px;
@@ -56,7 +56,6 @@ body {
     background-color: hsl(17, 100%, 50%);
     border: hsl(30, 100%, 0%) solid 5px;
     border-top: none;
-
 }
 
 .info__title {
