--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-body {
+* {
     margin: 0px;
-    font-family: sans-serif;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
 }
 
 .navbar *,
@@ -47,8 +48,6 @@ body {
 }
 
 .food__description {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
     padding: 5px;
 }
 
