--- a/style.css
+++ b/style.css
@@ -4,28 +4,30 @@
     font-size: 20px;
 }
 
-.navbar *,
-.info h3 {
-    margin-left: 25px;
+
+.navbar-container {
+    background-color: hsl(0, 0%, 0%);
+    padding: 1px 1px 0px 1px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
 .navbar {
-    background-color: hsl(0, 0%, 0%);
-    padding: 1px 1px 0px 1px;
-
+    display: flex;
+    justify-content: space-between;
+    width: 1250px;
 }
 
-.navbar__link {
-    text-decoration: none;
-}
-
-.navbar__home {
-    margin-bottom: 0px;
-    margin-top: 5px;
+.navbar__link--home,
+.navbar__link--list {
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
     color: hsl(0 0% 100%);
-    text-decoration: none;
-    padding-bottom: 5px;
     display: inline-block;
+    text-decoration: none;
+
 }
 
 .food {
