--- a/style.css
+++ b/style.css
@@ -19,15 +19,13 @@
     width: 1250px;
 }
 
-.navbar__link--home,
-.navbar__link--list {
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
+.navbar__link {
+    padding: 5px;
     color: hsl(0 0% 100%);
     display: inline-block;
     text-decoration: none;
-
+    font-weight: 500;
+    margin-right: 10px;
 }
 
 .food {
