--- a/style.css
+++ b/style.css
@@ -1,36 +1,40 @@
+body {
+    margin: 0;
+}
+
 * {
-    margin: 0px;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
+    box-sizing: border-box;
 }
 
 
-.navbar-container {
-    background-color: hsl(0, 0%, 0%);
-    padding: 1px 1px 0px 1px;
+.nav-container {
+    width: 100%;
+    background-color: black;
     display: flex;
     justify-content: center;
-    align-content: center;
+    padding: 15px;
 }
 
-.navbar {
+.nav {
+    width: 95%;
     display: flex;
     justify-content: space-between;
-    width: 1250px;
 }
 
-.navbar__link {
-    padding: 10px;
-    color: hsl(0 0% 100%);
-    display: inline-block;
-    text-decoration: none;
-    font-weight: 500;
-    margin-right: 10px;
+.nav__link {
+    font-weight: bold;
+    color: white;
+    text-decoration-color: transparent;
+    font-weight: bold;
 }
 
-.navbar__link:hover {
-    font-weight: 501;
-    text-decoration: underline;
+.nav__link:hover {
+    text-decoration-color: white;
+    text-decoration-thickness: 1.5px;
+}
+
+.nav__link.food-link {
+    margin-left: 20px;
 }
 
 .food {
