--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     width: 95%;
     display: flex;
     justify-content: space-between;
+    gap: 25px;
 }
 
 .nav__link {
@@ -32,8 +33,8 @@ body {
     text-decoration-thickness: 1.5px;
 }
 
-.nav__link.food-link {
-    margin-left: 20px;
+.nav__link--margin-left {
+    margin-left: auto;
 }
 
 .showcase {
